clusters/gw/apps/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    volsync.backube/privileged-movers: "true"
