clusters/gw/apps/app/gateway-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-private
spec:
  gatewayClassName: cilium-gw-private
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "${GW_PRIVATE_IPV6},${GW_PRIVATE_IPV4}"
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: All
    - hostname: "${DNS_HTTP2136_VHOST}"
      name: http2136-https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: http2136-cert
        mode: Terminate
    - hostname: "${LLDAP_VHOST}"
      name: lldap-https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: lldap-cert
        mode: Terminate
    - hostname: "${LLDAP_VHOST}"
      name: lldap-tls
      port: 636
      protocol: TLS
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-http-to-https-private
spec:
  parentRefs:
    - name: gw-private
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
