clusters/gw/apps/app/lldap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lldap
  name: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      containers:
        - image: lldap/lldap:v0.6.3
          name: lldap
          imagePullPolicy: Always
          ports:
            - name: ldaps
              containerPort: 6360
            - name: web
              containerPort: 17170
          readinessProbe:
            tcpSocket:
              port: web
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: lldap-data
              mountPath: /data
            - name: lldap-tls
              mountPath: /run/lldap/tls
              readOnly: true
      volumes:
        - name: lldap-data
          persistentVolumeClaim:
            claimName: lldap
        - name: lldap-tls
          secret:
            secretName: lldap-cert
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lldap
  name: lldap-web
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app: lldap
  ports:
    - name: web
      protocol: TCP
      port: 17170
      targetPort: web
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lldap
  name: lldap-ldaps
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  selector:
    app: lldap
  ports:
    - name: ldaps
      protocol: TCP
      port: 6360
      targetPort: ldaps
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap
spec:
  parentRefs:
    - name: gw-apps
      sectionName: lldap-https
  hostnames:
    - "${LLDAP_VHOST}"
  rules:
    - backendRefs:
        - name: lldap-web
          namespace: apps
          port: 17170
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: lldap
spec:
  parentRefs:
    - name: gw-apps
      sectionName: lldap-ldaps
  hostnames:
    - "${LLDAP_VHOST}"
  rules:
    - backendRefs:
        - name: lldap-ldaps
          namespace: apps
          port: 6360
