clusters/gw/apps/app/pocketid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pocketid
  name: pocketid
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pocketid
  template:
    metadata:
      labels:
        app: pocketid
    spec:
      containers:
        - image: ghcr.io/pocket-id/pocket-id:v2.11.0
          name: pocketid
          imagePullPolicy: Always
          volumeMounts:
            - name: pocketid-data
              mountPath: /app/data
          livenessProbe:
            exec:
              command:
                - /app/pocket-id
                - healthcheck
            initialDelaySeconds: 10
            periodSeconds: 90
            timeoutSeconds: 5
            failureThreshold: 2
      volumes:
        - name: pocketid-data
          persistentVolumeClaim:
            claimName: pocketid
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pocketid
  name: pocketid
spec:
  selector:
    app: pocketid
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 1411
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocketid
spec:
  parentRefs:
    - name: gw-public
      sectionName: pocketid-https
  hostnames:
    - "${POCKETID_VHOST}"
  rules:
    - backendRefs:
        - name: pocketid
          namespace: apps
          port: 80
