clusters/gw/apps/app/vaultwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vaultwarden
  name: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - image: docker.io/vaultwarden/server:1.37.1
          name: vaultwarden
          imagePullPolicy: Always
          volumeMounts:
            - name: vaultwarden-data
              mountPath: /data
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vaultwarden
  name: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs:
    - name: gw-public
      sectionName: vaultwarden-https
  hostnames:
    - "${VAULTWARDEN_VHOST}"
  rules:
    - backendRefs:
        - name: vaultwarden
          namespace: apps
          port: 80
